- finish language app

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -19,6 +19,11 @@
     "title" : "هل تريد تغيير اللغة ؟",
     "countMsg" : "سيتم تغيير لغة التطبيق",
     "title_textfiled" : "عنوان الصوت",
-    "file_textfiled" : "الملف الصوتي"
+    "file_textfiled" : "الملف الصوتي",
+    "arabic": "عربي",
+    "english": "إنجليزي",
+    "french": "فرنسي",
+    "message": "تأكد من إضافة عنوان الصوت أوالملف الصوتي",
+    "subject_share": "تطبيق لتكرار الصوت يساعد على ذكر الله كثيرا والحفظ والمذاكرة والتذكير بسهولة فى اى روتين لحياتك مع استخدامات كثيرة اخرى"
 
 }
