--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -19,5 +19,12 @@
     "title" : "Do you want to change the language?",
     "countMsg" : "language of the application will be changed",
     "title_textfiled" : "Audio title",
-    "file_textfiled" : "Audio file"
+    "file_textfiled" : "Audio file",
+    "arabic": "Arabic",
+    "english": "English",
+    "french": "French",
+    "message": "Make sure to add the title of the audio or audio file",
+    "subject_share": "An audio repetition application that helps you remember God often, memorize, study, and remember easily in any routine of your life, with many other uses."
+
+
 }
