- finish language app

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -24,6 +24,7 @@
     "english": "إنجليزي",
     "french": "فرنسي",
     "message": "تأكد من إضافة عنوان الصوت أوالملف الصوتي",
+    "message2": "قم بإدخال عدد مرات التكرار",
     "subject_share": "تطبيق لتكرار الصوت يساعد على ذكر الله كثيرا والحفظ والمذاكرة والتذكير بسهولة فى اى روتين لحياتك مع استخدامات كثيرة اخرى"
 
 }
