--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -24,6 +24,7 @@
     "english": "English",
     "french": "French",
     "message": "Make sure to add the title of the audio or audio file",
+    "message2": "Enter the number of repetitions",
     "subject_share": "An audio repetition application that helps you remember God often, memorize, study, and remember easily in any routine of your life, with many other uses."
 
 
