--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -24,6 +24,7 @@
   "english": "English",
   "french": "French",
   "message": "Assurez-vous d'ajouter le titre de l'audio ou du fichier audio",
+  "message2": "Entrez le nombre de répétitions",
   "subject_share": "Une application de répétition audio qui vous aide à vous souvenir souvent de Dieu, à mémoriser, à étudier et à vous souvenir facilement dans n'importe quelle routine de votre vie, avec de nombreuses autres utilisations."
 
 }
